@@ -115,7 +115,7 @@ int	NET_TCP_PORT(AGENT_REQUEST *request, AGENT_RESULT *result)
 
 static const char	*decode_type(int q_type)
 {
-	static char	buf[16];
+	ZBX_THREAD_LOCAL static char	buf[16];
 
 	switch (q_type)
 	{
